--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@ body {
 
 .container {
   /* background-color: blue; */
-  width: 450px;
-  height: 450px;
+  width: 60vw;
+  height: 60vw;
   display: grid;
   place-items: center;
 }
 .card {
   background-color: rgba(255, 235, 205, 0.699);
-  width: 450px;
-  height: 450px;
+  width: 60vw;
+  height: 60vw;
   display: grid;
   place-items: center;
   transform-style: preserve-3d;
@@ -41,8 +41,8 @@ body {
 }
 .front,
 .back {
-  width: 390px;
-  height: 390px;
+  width: 90%;
+  height: 90%;
   backface-visibility: hidden;
   position: absolute;
   display: grid;
